--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dr. Lauren J Ball</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
 
@@ -28,7 +28,7 @@
   <!-- HERO SECTION WITH VIDEO BACKGROUND -->
   <section class="hero hero-video" id="top" aria-label="Hero section">
     <video autoplay muted loop playsinline class="hero-bg" aria-hidden="true">
-      <source src="../images/libro.mp4" type="video/mp4" />
+      <source src="./images/libro.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay"></div>
@@ -45,10 +45,10 @@
       <div class="hero-image fade-up-delay" id="bookCover" role="button" tabindex="0" aria-pressed="false" aria-label="Toggle book cover flip">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="../images/book-cover.png" alt="Math Is Not Magic book cover" />
+            <img src="./images/book-cover.png" alt="Math Is Not Magic book cover" />
           </div>
           <div class="flip-card-back">
-            <img src="../images/book-backcover.png" alt="Book back cover" />
+            <img src="./images/book-backcover.png" alt="Book back cover" />
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
 
       <!-- RIGHT SIDE: Book Covers -->
       <div class="book-images" style="flex: 1 1 380px; display: flex; gap: 1.5rem; justify-content: center;">
-        <img src="../images/book-cover.png" alt="Book front cover" style="width: 190px; border-radius: 8px; box-shadow: 0 12px 24px rgba(0,0,0,0.1);" />
+        <img src="./images/book-cover.png" alt="Book front cover" style="width: 190px; border-radius: 8px; box-shadow: 0 12px 24px rgba(0,0,0,0.1);" />
         <img src="./images/book-backcover.png" alt="Book back cover" style="width: 190px; border-radius: 8px; box-shadow: 0 12px 24px rgba(0,0,0,0.1);" />
       </div>
 
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
