--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- HERO SECTION WITH VIDEO BACKGROUND -->
   <section class="hero hero-video" id="top" aria-label="Hero section">
     <video autoplay muted loop playsinline class="hero-bg" aria-hidden="true">
-      <source src="./images/libro.mp4" type="video/mp4" />
+      <source src="/images/libro.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay"></div>
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
