--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <!-- Image Preview -->
     <div class="image-wrapper">
-      <img src="../images/preview.jpg" alt="Audiobook Preview">
+      <img src="./images/preview.jpg" alt="Audiobook Preview">
     </div>
 
     <!-- CTA Area -->
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
