--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- HERO SECTION WITH VIDEO BACKGROUND -->
   <section class="hero hero-video" id="top" aria-label="Hero section">
     <video autoplay muted loop playsinline class="hero-bg" aria-hidden="true">
-      <source src="/images/libro.mp4" type="video/mp4" />
+      <source src="./images/libro.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay"></div>
@@ -117,7 +117,7 @@
     <div class="press-container container">
       <h2 id="press-heading">World of Inspiration</h2>
       <div class="press-grid">
-        <img src="../images/Dr. Lauren Ball.jpg" alt="PRESS diagram" class="press-img" />
+        <img src="./images/Dr. Lauren Ball.jpg" alt="PRESS diagram" class="press-img" />
         <div class="press-text">
           <h3>Inspiration for Writing the Book</h3>
          
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
