--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- HERO SECTION WITH VIDEO BACKGROUND -->
   <section class="hero hero-video" id="top" aria-label="Hero section">
     <video autoplay muted loop playsinline class="hero-bg" aria-hidden="true">
-      <source src="./images/libro.mp4" type="video/mp4" />
+      <source src="/images/libro.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay"></div>
@@ -45,10 +45,10 @@
       <div class="hero-image fade-up-delay" id="bookCover" role="button" tabindex="0" aria-pressed="false" aria-label="Toggle book cover flip">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="./images/book-cover.png" alt="Math Is Not Magic book cover" />
+            <img src="/images/book-cover.png" alt="Math Is Not Magic book cover" />
           </div>
           <div class="flip-card-back">
-            <img src="./images/book-backcover.png" alt="Book back cover" />
+            <img src="/images/book-backcover.png" alt="Book back cover" />
           </div>
         </div>
       </div>
@@ -80,8 +80,8 @@
 
       <!-- RIGHT SIDE: Book Covers -->
       <div class="book-images" style="flex: 1 1 380px; display: flex; gap: 1.5rem; justify-content: center;">
-        <img src="./images/book-cover.png" alt="Book front cover" style="width: 190px; border-radius: 8px; box-shadow: 0 12px 24px rgba(0,0,0,0.1);" />
-        <img src="./images/book-backcover.png" alt="Book back cover" style="width: 190px; border-radius: 8px; box-shadow: 0 12px 24px rgba(0,0,0,0.1);" />
+        <img src="/images/book-cover.png" alt="Book front cover" style="width: 190px; border-radius: 8px; box-shadow: 0 12px 24px rgba(0,0,0,0.1);" />
+        <img src="/images/book-backcover.png" alt="Book back cover" style="width: 190px; border-radius: 8px; box-shadow: 0 12px 24px rgba(0,0,0,0.1);" />
       </div>
 
     </div>
@@ -92,7 +92,7 @@
 
     <!-- Image Preview -->
     <div class="image-wrapper">
-      <img src="./images/preview.jpg" alt="Audiobook Preview">
+      <img src="/images/preview.jpg" alt="Audiobook Preview">
     </div>
 
     <!-- CTA Area -->
@@ -117,7 +117,7 @@
     <div class="press-container container">
       <h2 id="press-heading">World of Inspiration</h2>
       <div class="press-grid">
-        <img src="./images/Dr. Lauren Ball.jpg" alt="PRESS diagram" class="press-img" />
+        <img src="/images/Dr. Lauren Ball.jpg" alt="PRESS diagram" class="press-img" />
         <div class="press-text">
           <h3>Inspiration for Writing the Book</h3>
          
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
