--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dr. Lauren J Ball</title>
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
   <!-- HEADER -->
@@ -27,7 +27,7 @@
   <!-- HERO -->
   <section class="hero hero-about-video" id="top" aria-label="Hero section">
     <video autoplay muted loop playsinline class="hero-bg">
-      <source src="/images/libro.mp4" type="video/mp4" />
+      <source src="./images/libro.mp4" type="video/mp4" />
     </video>
     <div class="hero-overlay"></div>
 
@@ -41,7 +41,7 @@
         <a href="#story" class="btn">Meet Dr. Lauren J Bal</a>
       </div>
       <div class="hero-image fade-up-delay">
-        <img src="/images/Dr. Lauren Ball.jpg" alt="Jerry Knoelke portrait" />
+        <img src="./images/Dr. Lauren Ball.jpg" alt="Jerry Knoelke portrait" />
       </div>
     </div>
   </section>
@@ -175,3 +175,4 @@
   </script>
 </body>
 </html>
+
