--- a/books.html
+++ b/books.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Books — Jerry Knoelke</title>
-  <link rel="stylesheet" href="/css/books.css" />
+  <link rel="stylesheet" href="./css/books.css" />
 </head>
 <body>
 
@@ -31,7 +31,7 @@
       <h2 class="section-title">Book by Dr. Lauren J Ball</h2>
 
       <div class="book-card">
-        <img src="/images/book-cover.png" alt="Math Is Not Magic book cover" />
+        <img src="./images/book-cover.png" alt="Math Is Not Magic book cover" />
 
         <div class="book-info">
           <h3>Hypnotherapy Assertions and Affirmations for Christians</h3>
@@ -69,3 +69,4 @@
 
 </body>
 </html>
+
