--- a/books.html
+++ b/books.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Books — Jerry Knoelke</title>
+  <title>Dr. Lauren J Ball</title>
   <link rel="stylesheet" href="./css/books.css" />
 </head>
 <body>
@@ -69,4 +69,5 @@
 
 </body>
 </html>
+
 
