--- a/review.htm
+++ b/review.htm
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dr. Lauren J Ball — Reviews</title>
-  <link rel="stylesheet" href="/css/review.css" />
+  <link rel="stylesheet" href="./css/review.css" />
 </head>
 <body>
 
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+
